2006-??-?? MusicAnnotator 0.3.3 CVS
''
 * Using CLAM 0.91.1
 * Added OnsetExtractor by Antonio Pertusa
 * Fix: Some video cards displayed fonts as boxes
 * Internal refactoring to share code with NetworkEditor
 * Chord extraction as library
 * Reallocations removed from main loop for realtime

2006-06-18 MusicAnnotator 0.3.2
'Linux binary packaging release'
 * Using CLAM 0.91.0
 * Packages for debian sid, ubuntu dapper and fedora core 5
 * Few internal refactorings on instant views architecture
 * Fix: CLAM crash on exit due to duplicated symbols in CLAM libs

2006-05-08 MusicAnnotator 0.3.1
'Review feedback release'
 * Using CLAM 0.91 (CVS)
 * Instant views are managed as plugins and can be usable in any suited attribute
   which can be selected from the user interface. (Views/Add instant view)
 * Instant views optimizations to avoid KeySpace flickering
 * Fix: Artifacts on the segmentation editor view (the wave faded out on some regions)
 * Fix: The extractor console now keeps the aspect of the output
 * Fix: Crash when a descriptor load failed and the audio is longer
 * BocaClient:
   ** The BocaClient GUI is now a binary frontend to the python script 
      (to avoid using PyQt3 with qt3 licensing problems in windows)
   ** Errors when downloading avoid the Annotator to be launched
 * Windows distribution:
   ** Icons for the applications
   ** Binary distribution of some python scripts by using Py2exe
   ** Dynamic libraries are bundled with the installer to avoid problems 
   ** BOCA task are binded with the BOCA client
 * Credits and acknoledgements updated on the About dialog.

2006-04-30 MusicAnnotator 0.3.0
'Final SIMAC meeting release'
 * Using CLAM 0.91 (CVS)
 * Ported to QT4 using the new vmqt widgets
 * Build system moved to scons
 * Workflow reworked: Projects from scratch are not only possible but the convenient way.
 * Error conditions on load failures are better managed